--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -65,6 +65,13 @@
                                     </p>
                                     
                                     <% } %>
+                                    <div class="text-center mb-3">
+                                        <a href="/auth/google">
+                                            <button type="button" class="login-with-google-btn" >
+                                                Sign in with Google
+                                            </button>
+                                            </a>
+                                    </div>
                                     
                                 <div class="form-group">
                                     <label for="register-email-2">Your email address *</label>
