--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -62,7 +62,7 @@
                                 <h1 class="text-center">My Profile</h1>
                                 <p style="color: #000; font-weight: 500;">Full Name    : <%= user.firstName %> <%= user.secondName %></p>
                                 <p style="color: #000; font-weight: 500;">Email Address      : <%= user.email %></p>
-                                <p style="color: #000; font-weight: 500;">Phone Number : <%= user.mobile %> </p>
+                                <!-- <p style="color: #000; font-weight: 500;">Phone Number : <%= user.mobile %> </p> -->
                                 <p style="color: #000; font-weight: 500;">Country: India</p>
                             </div><!-- .End .tab-pane -->
 
