--- a/views/layouts/user/header.ejs
+++ b/views/layouts/user/header.ejs
@@ -120,7 +120,7 @@
                         </div><!-- End .compare-dropdown -->
 
                         <div class="wishlist">
-                            <a href="wishlist.html" title="Wishlist" id="wishlist-link">
+                            <a href="wishlist" title="Wishlist" id="wishlist-link">
                                 <div class="icon">
                                     <i class="icon-heart-o"></i>
                                     <span class="wishlist-count badge">3</span>
@@ -195,10 +195,5 @@
                 </div><!-- End .container -->
             </div><!-- End .header-bottom -->
         </header><!-- End .header -->
-        <script>
-            document.getElementById("wishlist-link").addEventListener("click", function(event) {
-                event.preventDefault(); // Prevents the default action of the link
-               
-            });
-        </script>
+   
         
