--- a/views/admin/view-offers.ejs
+++ b/views/admin/view-offers.ejs
@@ -12,7 +12,7 @@
             <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href="https://demos.creative-tim.com/material-dashboard/pages/dashboard" target="_blank">
                 <img src="/public/assets/images/icons/sacecart-01 1.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold text-white">Material Dashboard</span>
+                <span class="ms-1 font-weight-bold text-white"></span>
             </a>
         </div>
         <hr class="horizontal light mt-0 mb-2">
@@ -23,6 +23,14 @@
                         <i class="material-icons opacity-10">dashboard</i>
                     </div>
                     <span class="nav-link-text ms-1">Dashboard</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white " href="/admin/sales-report">
+                    <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="material-icons opacity-10">bar_chart</i>
+                    </div>
+                    <span class="nav-link-text ms-1">Sales Report</span>
                 </a>
             </li>
             <li class="nav-item">
